Fixed header alignment

--- a/css/application.css
+++ b/css/application.css
@@ -1,4 +1,29 @@
 /** Compass Imports **/
+@media (min-width: 1200px) {
+  /* line 2, ../scss/_layout.scss */
+  .navbar, .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
+    width: 1110px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (min-width: 1680px) {
+  /* line 9, ../scss/_layout.scss */
+  .navbar, .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
+    width: 1590px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+/* line 16, ../scss/_layout.scss */
+.inner-container {
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
 /* line 1, ../scss/_header.scss */
 .navbar {
   background-color: none;
